Fixed Conflicting Z-Index

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -588,6 +588,7 @@ footer {
   width: 100%;
   grid-template-columns: repeat(3, 33%);
   gap: 12px;
+  z-index: 1;
 }
 
 .project-card {
